Fixes Map offset not saved #21
