# docs/swagger.json
@@ -102,7 +102,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.OkResponse"
+                          "type": "object",
+                          "additionalProperties": {
+                            "type": "string"
+                          }
                         }
                     },
                     "500": {
@@ -791,11 +794,17 @@
                 "stopButtonEmergencyMillis": {
                     "type": "integer"
                 },
+              "tickPerM": {
+                "type": "number"
+              },
                 "tiltEmergencyMillis": {
                     "type": "integer"
                 },
                 "version": {
                     "type": "string"
+                },
+              "wheelBase": {
+                "type": "number"
                 }
             }
         }
